@@ -6,6 +6,10 @@
 	* stlport/config/stl_wince_4.h: removed, never used, stl_evc.h has been 
 	prefered.
 	
+	* test/unit/string_test.cpp: addition of a new test short_string_optim_bug
+	to check for a compiler bugs making the short string optim invalid thanks
+	Michael Fink.
+	
 2004-09-03  Francois Dumont  <dums@...>
 
 	* test/unit/fstream_test.cpp, sstream_test.cpp: Move of the test for the
